@@ -107,6 +107,8 @@ def setupHostChecker(configuration, director):
     """
     This is the setup for the "bad host check" management task.
     """
+    if not configuration.manager.hostCheckEnabled:
+        return service.Service()
     checkInterval = configuration.manager.hostCheckInterval
     checker = internet.TimerService(
         checkInterval, manager.checkBadHosts, director)
@@ -119,6 +121,8 @@ def setupConfigChecker(configFile, configuration, director):
     """
     This is the setup for the "config check" management task.
     """
+    if not configuration.manager.configCheckEnabled:
+        return service.Service()
     checkInterval = configuration.manager.configCheckInterval
     checker = internet.TimerService(
         checkInterval, manager.checkConfigChanges, configFile, configuration,
